# token-usage-manager

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PROGRESS.md  README.md  TEST.md  docker-compose.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_baseline.py  002_token_router_p0.py  003_channels.py  004_usage_cached.py  005_model_mode_image_price.py  006_member_budget.py  007_key_allowed_ips.py  008_model_aliases.py  009_org_price_multiplier.py  010_key_model_rpm.py  011_usage_cached_tokens.py  012_channel_counters.py  013_drop_commercial.py
backend/app/: cli.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/dialects/: anthropic.py  gemini.py
backend/app/routers/: admin.py  aliases.py  auth.py  billing.py  catalog.py  channels.py  ingress_anthropic.py  ingress_gemini.py  orgs.py  proxy.py
backend/app/services/: auth.py  cache.py  channel_health.py  credits.py  (+7 more)
backend/scripts/: seed.py
backend/tests/: conftest.py  test_aliases.py  test_audio.py  test_auth.py  test_billing.py  test_cache.py  test_cache_tokens.py  test_channel_health.py  test_channel_monitor.py  test_cli.py  test_endpoints.py  test_failover.py  test_ingress_dialects.py  test_ip_whitelist.py  test_member_budget.py  test_metrics.py  test_model_rpm.py  test_multitenant.py  test_oidc.py  test_p0_schema.py  test_playground.py  test_price_multiplier.py  test_quota.py  test_reasoning.py  test_rerank_responses.py  test_router.py  test_sso.py  test_stripe.py  test_usage_logs.py  test_video.py
(+27 files in other folders)
