[project]
name = "tokenrouter"
version = "0.1.0"
description = "TokenRouter — unified multi-provider AI model gateway"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "google-auth>=2.0",
    "requests>=2.0",
    "litellm>=1.60,<2.0",
    "alembic>=1.14",
    "pyjwt>=2.10",
    "bcrypt>=4.1",
    "redis>=5.0",
    "stripe>=11.0",
]

[project.scripts]
tr = "app.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "openai>=2.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
